--- a/MBL_Digital_Mine_Solution/website/index.html
+++ b/MBL_Digital_Mine_Solution/website/index.html
@@ -695,6 +695,24 @@
                         <div class="p-6 bg-white border border-gray-200 rounded-lg shadow-sm">
                             <h3 class="text-2xl font-bold text-gray-900"><span class="lang-cn">阶段一: MVP与核心可视化</span><span class="lang-en">Phase 1: MVP & Core Visualization</span></h3>
                             <p class="text-lg text-blue-600 font-semibold my-2"><span class="lang-cn">奠定基础: 实现业务"在线化"与"可视化"</span><span class="lang-en">Laying the Foundation: Achieving "Online" & "Visualized" Operations</span></p>
+                            <div class="flex items-center space-x-4 text-sm text-gray-500 my-3">
+                                <span class="flex items-center">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1.5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
+                                    </svg>
+                                    Leadtime: ~6-7 months
+                                </span>
+                                <span class="flex items-center">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1.5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v.01M12 6v-1h4a2 2 0 012 2v11a2 2 0 01-2 2H8a2 2 0 01-2-2V8a2 2 0 012-2h4z"></path>
+                                    </svg>
+                                    Budget: $150K
+                                </span>
+                            </div>
+                            <div class="text-xs italic text-gray-500 -mt-2 mb-3">
+                                <span class="lang-cn">*预算不含硬件及传感器，将另行核算。</span>
+                                <span class="lang-en">*The budgets above cover software and service fees only. Costs for hardware, sensors, and other physical materials will be calculated separately based on actual requirements.</span>
+                            </div>
                             <p class="mb-3 text-gray-600"><span class="lang-cn">此阶段旨在快速上线最小可行产品(MVP)，打通核心数据链路，解决"看不见、管不了"的燃眉之急。我们首先聚焦于"车辆实时跟踪"和"手动任务规划"，因为它们是所有后续优化的数据和流程基石。</span><span class="lang-en">This phase aims to rapidly launch an MVP, establish the core data link, and address the urgent issue of "can't see, can't manage." We first focus on "real-time vehicle tracking" and "manual task planning" as they are the data and process cornerstones for all subsequent optimizations.</span></p>
                             <div class="bg-gray-50 p-4 rounded-lg">
                                 <h4 class="font-semibold text-gray-800 mb-2"><span class="lang-cn">核心交付物 / Key Deliverables:</span></h4>
@@ -712,6 +730,24 @@
                          <div class="p-6 bg-white border border-gray-200 rounded-lg shadow-sm">
                             <h3 class="text-2xl font-bold text-gray-900"><span class="lang-cn">阶段二: 扩展与优化</span><span class="lang-en">Phase 2: Expansion & Optimization</span></h3>
                             <p class="text-lg text-green-600 font-semibold my-2"><span class="lang-cn">深化能力: 从"被动监控"走向"主动优化"</span><span class="lang-en">Deepening Capabilities: From "Passive Monitoring" to "Active Optimization"</span></p>
+                            <div class="flex items-center space-x-4 text-sm text-gray-500 my-3">
+                                <span class="flex items-center">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1.5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
+                                    </svg>
+                                    Leadtime: ~4 months
+                                </span>
+                                <span class="flex items-center">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1.5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v.01M12 6v-1h4a2 2 0 012 2v11a2 2 0 01-2 2H8a2 2 0 01-2-2V8a2 2 0 012-2h4z"></path>
+                                    </svg>
+                                    Budget: $90K-$100K
+                                </span>
+                            </div>
+                            <div class="text-xs italic text-gray-500 -mt-2 mb-3">
+                                <span class="lang-cn">*预算不含硬件及传感器，将另行核算。</span>
+                                <span class="lang-en">*The budgets above cover software and service fees only. Costs for hardware, sensors, and other physical materials will be calculated separately based on actual requirements.</span>
+                            </div>
                             <p class="mb-3 text-gray-600"><span class="lang-cn">在MVP基础上，我们通过引入高级分析、工单管理和外部系统集成，解决"决策无数据"、"维修靠经验"和"数据孤岛"等深层问题，真正实现降本增效。</span><span class="lang-en">Building on the MVP, we address deeper issues like "data-less decisions," "experience-based maintenance," and "data silos" by introducing advanced analytics, work order management, and external system integration to truly achieve cost reduction and efficiency improvement.</span></p>
                              <div class="bg-gray-50 p-4 rounded-lg">
                                 <h4 class="font-semibold text-gray-800 mb-2"><span class="lang-cn">核心交付物 / Key Deliverables:</span></h4>
